--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
  * governing permissions and limitations under the License.
  */
 
-:root {
+ :root {
   /* colors */
   --link-color: #035fe6;
   --link-hover-color: #136ff6;
@@ -39,6 +39,10 @@
 
   /* nav height */
   --nav-height: 64px;
+}
+
+.section.navbar-main.tab-block-container.nav-tools {
+  display: none;
 }
 
 @font-face {
