--- a/blocks/purple-background/purple-background.css
+++ b/blocks/purple-background/purple-background.css
@@ -8,7 +8,7 @@
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px; 
-    font-size: 28px;
+    font-size: 35px;
   }
   
   .purple-background a {
@@ -20,7 +20,7 @@
   
   @media (max-width: 768px) {
     .purple-background h3 {
-      font-size: 16px; 
+      font-size: 80%; 
     }
   }
   
